# openfga-rs

./: CHANGELOG.md  Cargo.toml
src/: lib.rs
src/authentication/: bearer_token.rs  client_credentials.rs  mod.rs
