[package]
name = "openfga-rs"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust SDK for OpenFGA"
repository = "https://github.com/liamwh/openfga-rs.git"
authors = ["Liam Woodleigh-Hardinge", "liam.woodleigh@gmail.com"]
include = [
    "/src",
    "**/**.rs",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "!tmp/**",
    "/proto/**",
]
resolver = "2"

[features]
vendored-protoc = ["prost-wkt-types/vendored-protoc"]

[dependencies]
tonic = { version = "0.12", features = [
    "tls",
    "tls-native-roots",
    "gzip",
    "zstd",
] }
prost = { version = "0.13", features = ["std", "prost-derive"] }
prost-types = "0.13"
prost-wkt = "0.6"
prost-wkt-types = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
mockito = "1.5"

[build-dependencies]
tonic-build = { version = "0.12" }
prost-wkt-build = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.cyclonedx]
included_dependencies = "all"
